# AS_FFmpeg

./: README.md
app/: build.gradle
app/src/androidTest/java/com/tianzhuan/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/tianzhuan/player/: MainActivity.java
app/src/test/java/com/tianzhuan/player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
